--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
             <div class="centercalc">
                 <h1>Percentage Calc</h1>
                 <form id = "form">
-                    <input type="text" id="inputField1">
-                    <input type="text" id="inputField2"><br><br>
+                   Part: <input type="text" id="inputField1">
+                   Whole: <input type="text" id="inputField2"><br><br>
 
                     <input type="submit" value="Calculate" >
                 </form>
